# rust-syslog-rfc5424

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  Cargo.toml  LICENSE.txt  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/: bench.rs  validate_file.rs
src/: facility.rs  lib.rs  message.rs  parser.rs  severity.rs  structured_data.rs
