[package]
name = "syslog_rfc5424"
version = "0.7.0"
authors = ["James Brown <roguelazer@roguelazer.com>"]
description = "Parser for RFC5424 (IETF-format) syslog messages"
documentation = "https://docs.rs/syslog_rfc5424/"
homepage = "https://github.com/Roguelazer/rust-syslog-rfc5424"
repository = "https://github.com/Roguelazer/rust-syslog-rfc5424"
license = "ISC"
readme = "README.md"
edition = "2018"

[dependencies]
time = "^0.1"
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = "1.0"
indexmap = { version = "1", optional = true }

[features]
serde-serialize = ["serde", "serde_derive", "serde_json", "indexmap/serde-1"]

[dev-dependencies]
timeit = "0.1"
fxhash = "0.2"
clap = "2"

[badges]
travis-ci = { repository = "Roguelazer/rust-syslog-rfc5424" }

[package.metadata.docs.rs]
all-features = true
